--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Petshop - Home</title>
+   
     <!-- 
 
         Esse é um exercício em HTML. 
@@ -13,7 +14,7 @@
         O conteúdo principal deve conter duas seções com títulos e parágrafos.
         O rodapé deve conter um parágrafo com o texto "© 2024 Petshop. Todos os direitos reservados.".
         Adicione uma tabela com fotos de animais e seus nomes.
-
+<
     -->
 </head>
 <body>
@@ -26,25 +27,28 @@
                 <li><a href="loja.html">Loja</a></li>
                 <li><a href="contato.html">Contato</a></li>
             </ul>
+            <hr></nav>
         </nav>
     </header>
 
     <table>
         <tr>
-          <th></th>
-          <th><img src="img/tamanho-de-gato.jpg" > </th> 
-          <th><img src="img/layout-loja-de-produtos-pet-1024x683.jpeg"></th>
-          
+        
+          <th class="Além"><img src="img/studio-headshot-portrait-brown-white-600nw-2269582635.webp" alt=""></th>
+          <th> <img src="img/tamanho-de-gato.jpg" > </th> 
+          <th> <img src="img/layout-loja-de-produtos-pet-1024x683.jpeg"></th>
+          <th> </th>
+
         </tr>
         <tr>
           <td>Banho</td>
-          <td>Maria Anders</td>
-          <td>Germany</td>
+          <td>Tosa</td>
+          <td>PetSPA <BR><BR></td> <BR>
         </tr>
         <tr>
-          <td>Centro comercial Moctezuma</td>
-          <td>Francisco Chang</td>
-          <td>Mexico</td>
+          <td>Produtos em geral</td>
+          <td>Vacinas</td>
+          <td>PetTaxi</td>
         </tr>
       </table>
     <!-- Conteúdo principal -->
